--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "inc/panels-lite"]
 	path = inc/panels-lite
 	url = git@github.com:siteorigin/panels-lite.git
+[submodule "extras"]
+	path = extras
+	url = git@github.com:siteorigin/extras.git
